--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,124 +1,115 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
 
-    <link rel="icon" href="{{ site.baseurl }}/assets/images/logo.png" />
+<head>
 
-    <title>{{ page.title }} | {{site.name}}</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-    {% seo %}
+  <link rel="icon" href="{{ site.baseurl }}/assets/images/logo.png" />
 
-    <link href="{{ site.baseurl }}/assets/css/prism.css" rel="stylesheet" />
+  <title>{{ page.title }} | {{site.name}}</title>
 
-    <link href="{{ site.baseurl }}/assets/css/theme.css" rel="stylesheet" />
+  {% seo %}
 
-    <script src="{{ site.baseurl }}/assets/js/jquery.min.js"></script>
-  </head>
+  <link href="{{ site.baseurl }}/assets/css/prism.css" rel="stylesheet" />
 
-  {% if jekyll.environment == 'production' %}
-  <!-- change your GA id in _config.yml -->
-  <script>
-    (function (i, s, o, g, r, a, m) {
-      i["GoogleAnalyticsObject"] = r;
-      (i[r] =
-        i[r] ||
-        function () {
-          (i[r].q = i[r].q || []).push(arguments);
-        }),
-        (i[r].l = 1 * new Date());
-      (a = s.createElement(o)), (m = s.getElementsByTagName(o)[0]);
-      a.async = 1;
-      a.src = g;
-      m.parentNode.insertBefore(a, m);
-    })(
-      window,
-      document,
-      "script",
-      "//www.google-analytics.com/analytics.js",
-      "ga"
-    );
-    ga("create", "{{site.google_analytics}}", "auto");
-    ga("send", "pageview");
-  </script>
-  {% endif %} {% capture layout %}{% if page.layout %}layout-{{ page.layout }}{%
+  <link href="{{ site.baseurl }}/assets/css/theme.css" rel="stylesheet" />
+
+  <script src="{{ site.baseurl }}/assets/js/jquery.min.js"></script>
+</head>
+
+{% if jekyll.environment == 'production' %}
+<!-- change your GA id in _config.yml -->
+<script>
+  (function (i, s, o, g, r, a, m) {
+    i["GoogleAnalyticsObject"] = r;
+    (i[r] =
+      i[r] ||
+      function () {
+        (i[r].q = i[r].q || []).push(arguments);
+      }),
+      (i[r].l = 1 * new Date());
+    (a = s.createElement(o)), (m = s.getElementsByTagName(o)[0]);
+    a.async = 1;
+    a.src = g;
+    m.parentNode.insertBefore(a, m);
+  })(
+    window,
+    document,
+    "script",
+    "//www.google-analytics.com/analytics.js",
+    "ga"
+  );
+  ga("create", "{{site.google_analytics}}", "auto");
+  ga("send", "pageview");
+</script>
+{% endif %} {% capture layout %}{% if page.layout %}layout-{{ page.layout }}{%
   endif %}{% endcapture %}
-  <body>
-    <!-- defer loading of font and font awesome -->
-    <noscript id="deferred-styles">
-      <link
-        href="https://fonts.googleapis.com/css?family=Sen:400,700&display=swap"
-        rel="stylesheet"
-      />
-      <link
-        rel="stylesheet"
-        href="https://use.fontawesome.com/releases/v5.0.13/css/all.css"
-        integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp"
-        crossorigin="anonymous"
-      />
-    </noscript>
 
-    <!-- Begin Sidebar Navigation
+<body>
+  <!-- defer loading of font and font awesome -->
+  <noscript id="deferred-styles">
+    <link href="https://fonts.googleapis.com/css?family=Sen:400,700&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css"
+      integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous" />
+  </noscript>
+
+  <!-- Begin Sidebar Navigation
 ================================================== -->
 
-    <div class="sidebar"></div>
-    <div class="nav-icon">
-      <div class="hamburger-bar"></div>
-    </div>
-    <div id="blackover-nav" class="blackover"></div>
-    <nav id="menu">
-      <ul>
-        <h3>Fabian's Blog</h3>
-        <li><a href="{{ site.baseurl }}/">TIL</a></li>
-        <li>
-          <a href="{{ site.baseurl }}/about"
-            >About
-            <span class="badge badge-primary">FE 김현규</span></a
-          >
-        </li>
-        <!-- <li>
+  <div class="sidebar"></div>
+  <div class="nav-icon">
+    <div class="hamburger-bar"></div>
+  </div>
+  <div id="blackover-nav" class="blackover"></div>
+  <nav id="menu">
+    <ul>
+      <h3>Dennis's Blog</h3>
+      <li><a href="{{ site.baseurl }}/">TIL</a></li>
+      <li>
+        <a href="{{ site.baseurl }}/about">About
+          <span class="badge badge-primary">FE 김동훈</span></a>
+      </li>
+      <!-- <li>
           <a
             target="_blank"
             href="https://bootstrapstarter.com/bootstrap-templates/jekyll-theme-memoirs/"
             >Get Memoirs</a
           >
         </li> -->
-        <!-- <li><a href="{{ site.baseurl }}/contact">Contact</a></li> -->
-      </ul>
-    </nav>
+      <!-- <li><a href="{{ site.baseurl }}/contact">Contact</a></li> -->
+    </ul>
+  </nav>
 
-    {% include search-lunr.html %}
+  {% include search-lunr.html %}
 
-    <!-- End Sidebar Navigation
+  <!-- End Sidebar Navigation
 ================================================== -->
 
-    <div class="site-content {% if page.url == '/' %} firstpage {% endif %}">
-      <div class="container">
-        <!-- Site Logo/Name
+  <div class="site-content {% if page.url == '/' %} firstpage {% endif %}">
+    <div class="container">
+      <!-- Site Logo/Name
     ================================================== -->
 
-        <a class="navbar-brand" href="{{ site.baseurl }}/">
-          <img src="{{ site.baseurl }}/{{ site.logo }}" alt="{{ site.name }}" />
-        </a>
+      <a class="navbar-brand" href="{{ site.baseurl }}/">
+        <img src="{{ site.baseurl }}/{{ site.logo }}" alt="{{ site.name }}" />
+      </a>
 
-        <!-- Site Tag
+      <!-- Site Tag
     ================================================== -->
-        {% if page.url == '/' %}
-        <p class="sitetag">{{ site.description }}</p>
-        {% endif %}
+      {% if page.url == '/' %}
+      <p class="sitetag">{{ site.description }}</p>
+      {% endif %}
 
-        <!-- Content
+      <!-- Content
     ================================================== -->
-        <div class="main-content">{{ content }}</div>
+      <div class="main-content">{{ content }}</div>
 
-        {% if site.mailchimp-list %}
-        <!-- Newsletter
+      {% if site.mailchimp-list %}
+      <!-- Newsletter
     ================================================== -->
-        <!-- <div class="newsletter text-center">
+      <!-- <div class="newsletter text-center">
           <span class="h4"
             ><img
               src="{{ site.baseurl }}/{{ site.logo }}"
@@ -187,10 +178,8 @@
     {% if site.lazyimages == "enabled" %}
     <script src="{{ site.baseurl }}/assets/js/lazyload.js"></script>
     {% endif %} {% if page.layout == 'post' %}
-    <script
-      id="dsq-count-scr"
-      src="//{{site.disqus}}.disqus.com/count.js"
-    ></script>
+    <script id="dsq-count-scr" src="//{{site.disqus}}.disqus.com/count.js"></script>
     {% endif %}
-  </body>
+</body>
+
 </html>
